Makes corrections sugested by advisor

--- a/tex/analise-funcional.tex
+++ b/tex/analise-funcional.tex
@@ -120,3 +120,16 @@ Portanto, \( \norm{ \cdot } \) de fato é uma norma, denominada \emph{norma indu
 \begin{defn}
     Um \emph{espaço de Hilbert} é um espaço com produto interno completo com relação à norma induzida pelo produto interno.
 \end{defn}
+
+\begin{defn}
+    Um espaço vetorial \( V \) é a \emph{soma direta} de dois de seus subespaços \( W_{ 1 } \) e \( W_{ 2 } \) se todo \( v \in V \) possui uma representação única \[
+        v = w_{ 1 } + w_{ w }
+    ,\]
+    com \( w_{ 1 } \in W_{ 1 } \) e \( w_{ 2 } \in W_{ 2 } \).
+    Nesse caso, escrevemos \[
+        V = W_{ 1 } \oplus W_{ 2 }
+    .\]
+\end{defn}
+\begin{rem}
+    Naturalmente, dados os subespaços disjuntos \( W_{ 1 } \) e \( W_{ 2 } \), podemos também construir o espaço vetorial \( W_{ 1 } \oplus W_{ 2 } \).
+\end{rem}
