--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -5,14 +5,14 @@
 \newtheorem{cor}[teo]{Corolário}
 \newtheorem*{axiom}{Axioma}
 
-\newtheorem*{TAU}{Teorema da aproximação universal}
-\newtheorem*{Riesz}{Teorema da representação de Riesz}
+\newtheorem*{TAU}{Teorema da Aproximação Universal}
+\newtheorem*{Riesz}{Teorema da Representação de Riesz}
 
 \theoremstyle{definition}
 \newtheorem{defn}{Definição}[section]
 \newtheorem{conj}{Conjectura}[section]
-\newtheorem{exmp}{Exemplo}
-\newtheorem*{rem}{Observação}
+\newtheorem{exmp}{Exemplo}[section]
+\newtheorem{rem}{Observação}[section]
 
 \theoremstyle{remark}
 \newtheorem*{note}{Nota}
