--- a/tex/hilbert.tex
+++ b/tex/hilbert.tex
@@ -20,11 +20,11 @@ O leitor interassado poderá encontrar mais informações em \cite{hilbert}.
     \begin{equation}
         d(f, g) = \norm{ f - g }_{ \infty }
     .\end{equation}
-    O leitor pode encontrar resultados e definições elementares relativas a espaços métricos (inclusive o teorema da categoria de Baire, que será usado a seguir) no apêndice \ref{ap: espacos_metricos}.
+    O leitor pode encontrar resultados e definições elementares relativas a espaços métricos (inclusive o Teorema da Categoria de Baire, que será usado a seguir) no Apêndice \ref{ap: espacos_metricos}.
 \end{rem}
 Aqui nos atentaremos ao caso especial em que \( n = 2 \):
 \begin{teo}
-    Existem \( \lambda \in \R \) e funções \( ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \in [C(\I)]^{ 5 } \) tais que, para toda função \( f \in C(\I^{ 2 }) \) existe \( g : \R \to \R \), contínua, satisfazendo, para todos \( ( x_{ 1 }, x_{ 2 } ) \in \I^{ 2 } \), \[
+    Existem \( \lambda \in \R \backslash \Q \) e funções \( ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \in [C(\I)]^{ 5 } \) tais que, para toda função \( f \in C(\I^{ 2 }) \) existe \( g : \R \to \R \), contínua, satisfazendo, para todos \( ( x_{ 1 }, x_{ 2 } ) \in \I^{ 2 } \), \[
         f ( x_{ 1 }, x_{ 2 } ) =
         \sum_{ k=1 }^{ 5 } g ( \varphi_{ k } ( x_{ 1 } ) + \lambda \varphi_{ k } ( x_{ 2 } ) )
     .\]
@@ -36,21 +36,21 @@ Aqui nos atentaremos ao caso especial em que \( n = 2 \):
     .\]
 \end{rem}
 Para a prova que apresentaremos, necessitamos de alguns lemas.
-O primeiro deles clarifica a existência e a escolha de \( \lambda \).
+%% O primeiro deles clarifica a existência e a escolha de \( \lambda \).
+%% \begin{lem}
+%%     Existe um número real \( \lambda \) tal que, para quaisquer \( x_{ 1 }, x_{ 2 }, x_{ 3 }, x_{ 4 } \in \Q \), \[
+%%         x_{ 1 } + \lambda y_{ 1 } = x_{ 2 } + \lambda y_{ 2 }
+%%         \text{ implica }
+%%         x_{ 1 } = x_{ 2 } \text{ e } y_{ 1 } = y_{ 2 }
+%%     .\]
+%%     \label{lem: lambda}
+%% \end{lem}
+%% \begin{proof}
+%%     Basta escolher \( \lambda \in \R \backslash \Q \), pois se \( x_{ 1 } + \lambda y_{ 1 } = x_{ 2 } + \lambda x_{ 2 } \), então \( x_{ 1 } - x_{ 2 } = \lambda ( y_{ 2 } - y_{ 1 } ) \).
+%%     Como \( x_{ 1 } - x_{ 2 } \in \Q \) necessariametente o lado direito deve ser \( 0 \), ou seja, \( y_{ 2 } = y_{ 1 } \) e \( x_{ 2 } = x_{ 1 } \).
+%% \end{proof}
 \begin{lem}
-    Existe um número real \( \lambda \) tal que, para quaisquer \( x_{ 1 }, x_{ 2 }, x_{ 3 }, x_{ 4 } \in \Q \), \[
-        x_{ 1 } + \lambda y_{ 1 } = x_{ 2 } + \lambda y_{ 2 }
-        \text{ implica }
-        x_{ 1 } = x_{ 2 } \text{ e } y_{ 1 } = y_{ 2 }
-    .\]
-    \label{lem: lambda}
-\end{lem}
-\begin{proof}
-    Basta escolher \( \lambda \in \R \backslash \Q \), pois se \( x_{ 1 } + \lambda y_{ 1 } = x_{ 2 } + \lambda x_{ 2 } \), então \( x_{ 1 } - x_{ 2 } = \lambda ( y_{ 2 } - y_{ 1 } ) \).
-    Como \( x_{ 1 } - x_{ 2 } \in \Q \) necessariametente o lado direito deve ser \( 0 \), ou seja, \( y_{ 2 } = y_{ 1 } \) e \( x_{ 2 } = x_{ 1 } \).
-\end{proof}
-\begin{lem}
-    Fixe \( \lambda \) satisfazendo o lema \ref{lem: lambda}.
+    Fixe \( \lambda \) irracional.
     Seja \( f \in C(\I^2) \) com \( \norm{ f }_{ \infty } = 1 \).
     Seja \( U_{ f } \) o suconjunto de \( [C(\I)]^{ 5 } \) tal que \( ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \in U_{ f } \) se, e somente se, existe uma \( g \in C(\R) \) tal que
     \begin{equation}
@@ -70,10 +70,10 @@ O primeiro deles clarifica a existência e a escolha de \( \lambda \).
     \label{lem: uf}
 \end{lem}
 Enquanto é fácil perceber que \( U_{ f } \) é aberto, pois se \( \varphi = ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \) satisfaz (\ref{eq: g_bound}) e (\ref{eq: dif_bound}) para uma dada \( g \), então todas as tuplas suficientemente perto de \( \varphi \) também satisfarão, a prova da densidade é mais extensa e será omitida, por não ser do interesse desse trabalho.
-Nos restringimos a mencionar que ela necessita do lema \ref{lem: lambda}.
+Nos restringimos a mencionar que ela necessita utiliza a hipótese da irracionalidade de \( \lambda \).
 %% Colocar referência de onde ela pode ser encontrada
 \begin{lem}
-    Seja \( \lambda \) como no lema \ref{lem: lambda}.
+    Seja \( \lambda \) irracional.
     Então existem \( \varphi_{ 1 }, \dots, \varphi_{ 5 } \in C(\I) \) com a propriedade de que, dada \( f \in C(\I^2) \), existe uma \( g \in C(\R) \) satisfazendo \[
         \abs{ g(t) } \leq \frac{ 1 }{ 7 } \norm{ f }_{ \infty } \text{ para todo } t \in \R
     ,\]
@@ -87,13 +87,13 @@ Nos restringimos a mencionar que ela necessita do lema \ref{lem: lambda}.
 \begin{proof}
     Podemos supor, sem perda de generalidade, que \( \norm{ f }_{ \infty } = 1 \).
     Seja \( (h_{ j })_{ j\in\N } \) uma sequência de funções pertencentes a \( C(\I^2) \) tal que o conjunto \( \left\{ h_{ j } : j\in \N \right\} \) é denso na esfera unitária de \( C(\I^2) \).
-    Na notação do lema \ref{lem: uf}, cada \( h_{ j } \) determina um conjunto \( U_{ j } = U_{ h_{ j } } \subset  [C(\I)]^{ 5 } \) aberto e denso.
-    Pelo teorema da categoria de Baire, o conjunto \[
+    Na notação do Lema \ref{lem: uf}, cada \( h_{ j } \) determina um conjunto \( U_{ j } = U_{ h_{ j } } \subset  [C(\I)]^{ 5 } \) aberto e denso.
+    Pelo Teorema da Categoria de :aire, o conjunto \[
         V = \bigcap_{ j\in\N } U_{ j }
     \]
     é denso em \( [C(\I)]^{ 5 } \).
     Pela densidade de \( \left\{ h_{ j } : j \in \N \right\} \), existe \( m \in \N \) tal que \( \norm{ f - h_{ m } }_{ \infty } < 1/72 \).
-    Além disso, pelo lema \ref{lem: uf} podemos tomar \( ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \in V \subset  U_{ m } \) tal que exista \( g \in C(\I) \) satisfazendo \[
+    Além disso, pelo Lema \ref{lem: uf} podemos tomar \( ( \varphi_{ 1 }, \dots, \varphi_{ 5 } ) \in V \subset  U_{ m } \) tal que exista \( g \in C(\I) \) satisfazendo \[
         \abs{ g(t) } \leq \frac{ 1 }{ 7 } \text{ para todo } t \in \R
     ,\]
     e \[
@@ -114,9 +114,9 @@ Nos restringimos a mencionar que ela necessita do lema \ref{lem: lambda}.
     ,\]
     o que termina a prova.
 \end{proof}
-Agora podemos enunciar a demonstração do teorema \ref{teo: hilbert13}.
-\begin{proof}[Demonstração do teorema \ref{teo: hilbert13}]
-    Pelo lema \ref{lem: baire}, podemos fixar \( \lambda \in \R \) e \( \varphi_{ 1 }, \dots, \varphi_{ 5 } \in C(\I) \) tais que, dada \( f \in C(\I^2) \), existe \( g_{ 0 } \in C(\R) \) satisfazendo
+Agora podemos enunciar a demonstração do Teorema \ref{teo: hilbert13}.
+\begin{proof}[Demonstração do Teorema \ref{teo: hilbert13}]
+    Pelo Lema \ref{lem: baire}, podemos fixar \( \lambda \in \R \) e \( \varphi_{ 1 }, \dots, \varphi_{ 5 } \in C(\I) \) tais que, dada \( f \in C(\I^2) \), existe \( g_{ 0 } \in C(\R) \) satisfazendo
     \begin{equation}
         \abs{ g_{ 0 }(t) } \leq \frac{ 1 }{ 7 } \norm{ f }_{ \infty } \text{ para todo } t \in \R
         \label{eq: g}
@@ -141,7 +141,7 @@ Agora podemos enunciar a demonstração do teorema \ref{teo: hilbert13}.
         \norm{ g_{ n } }_{ \infty } <
         \frac{ 1 }{ 7 } \left( \frac{ 8 }{ 9 } \right)^{ n } \norm{ f }
     .\]
-    Sendo assim, a série \( \sum g_{ n } \) converge em módulo para uma certa \( g \in C(\R) \) e, com isso, \[
+    Sendo assim, a série \( \sum g_{ n } \) absolutamente para uma certa \( g \in C(\R) \) e, com isso, \[
         f = \sum_{ n\in\N } f_{ n } - f_{ n+1 }
         = \sum_{ n\in\N } \sum_{ k=1 }^{ 5 } g_{ n } \circ \Phi_{ k }
         = \sum_{ k=1 }^{ n } \left( 
